[project]
name = "turntable_home_automation"
version = "0.1.0"
description = "Simple script for controlling a preamp and AVR based on the state of a turntable."
authors = [
    { name = "John H. Ring IV", email = "johnhringiv@gmail.com" }
]
dependencies = [
    "httpx~=0.28.1",
    "denonavr~=1.3.2",
]

[project.optional-dependencies]
dev = [
    "python-dotenv",
    "ruff",
    "pre-commit",
]